2008-10-28  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/entry.c (almanah_entry_get_content):
	* src/interface.c (almanah_create_interface):
	* src/main-window.c (almanah_main_window_new),
	(mw_preferences_activate_cb):
	* src/main.c (storage_manager_disconnected_cb), (almanah_quit),
	(main):
	* src/main.h: Only allow the Preferences dialogue to be opened if
	encryption support is compiled in.
	* src/storage-manager.c (almanah_storage_manager_get_statistics):
	Fix a crasher when getting database statistics.

2008-10-28  Philip Withnall  <philip@tecnocode.co.uk>

	Updated svn:ignore lists.

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/Makefile.am:
	* data/almanah.schemas.in:
	* src/main-window.c (almanah_main_window_dispose),
	(almanah_main_window_new), (save_window_state),
	(restore_window_state), (mw_delete_event_cb): Save the window
	dimensions and position upon exiting, and restore them when starting
	the program. Promotes the dependency on GConf to be mandatory (was
	previously dependent on compiling with encryption support).
	* src/links/file.c (file_view): Fix a compilation error about
	mismatched pointer types.

2008-10-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/add-link-dialog.c (almanah_add_link_dialog_new):
	* src/interface.c:
	* src/interface.h:
	* src/links/file.c (file_view):
	* src/links/note.c:
	* src/links/uri.c (uri_view):
	* src/main-window.c (almanah_main_window_new),
	(save_current_entry), (mw_calendar_day_selected_cb):
	* src/main.c (almanah_quit), (main):
	* src/preferences-dialog.c (almanah_preferences_dialog_new),
	(pd_key_combo_changed_cb), (pd_new_key_button_clicked_cb):
	* src/search-dialog.c (almanah_search_dialog_new):
	Kill almanah_interface_error.

2008-10-22  Philip Withnall  <philip@tecnocode.co.uk>

	* data/almanah.ui: Fix one missing rename from the previous commit.
	* src/entry.c (almanah_entry_get_content):